# kaiaai_gazebo

./: CMakeLists.txt  README.md  kaia_sims_ci.repos  package.xml
include/kaiaai_gazebo/: self_drive_gazebo.hpp
kaia_fake_node/: CMakeLists.txt  package.xml
kaia_fake_node/include/kaia_fake_node/: kaia_fake_node.hpp
kaia_fake_node/launch/: kaia_fake_node.launch.py  rviz2.launch.py
kaia_fake_node/src/: kaia_fake_node.cpp
kaia_faux_node/: CMakeLists.txt  package.xml
kaia_faux_node/include/kaia_faux_node/: kaia_faux_node.hpp
kaia_faux_node/launch/: kaia_faux_node.launch.py
kaia_faux_node/param/: snoopy.yaml  waffle.yaml
kaia_faux_node/src/: kaia_faux_node.cpp
kaia_gazebo/: CMakeLists.txt  package.xml
kaia_gazebo/include/kaia_gazebo/: kaia_self_drive.hpp  self_drive_gazebo.hpp
kaia_gazebo/launch/: kaia_dqn_stage1.launch  kaia_dqn_stage2.launch  kaia_dqn_stage3.launch  kaia_dqn_stage4.launch  kaia_house.launch.py  kaia_world.launch.py  robot_state_publisher.launch.py  self_drive_gazebo.launch.py  spawn_kaia_bot.launch.py  world.launch.py
kaia_gazebo/models/goofy/: model-1_4_.sdf  model.config  model.sdf
kaia_gazebo/models/kaia_burger/: model-1_4.sdf  model.config  model.sdf
kaia_gazebo/models/kaia_common/: model.config
kaia_gazebo/models/kaia_dqn_world/: model.config  model.sdf
kaia_gazebo/models/kaia_dqn_world/inner_walls/: model.config
kaia_gazebo/models/kaia_dqn_world/obstacle1/: model.config
kaia_gazebo/models/kaia_dqn_world/obstacle2/: model.config
kaia_gazebo/models/kaia_dqn_world/obstacles/: model.config
kaia_gazebo/models/kaia_house/: model.config  model.sdf
kaia_gazebo/models/kaia_snoopy/: model.config  model.sdf
kaia_gazebo/models/kaia_waffle/: model-1_4.sdf  model.config  model.sdf
kaia_gazebo/models/kaia_waffle_pi/: model-1_4_.sdf  model.sdf
kaia_gazebo/models/kaia_world/: model-1_4.sdf  model.config
kaia_gazebo/models/loki/: model-1_4.sdf  model.sdf
kaia_gazebo/models/snoopy/: model-1_4.sdf
kaia_gazebo/script/: urdf2sdf.sh
kaia_gazebo/src/: kaia_self_drive.cpp  self_drive_gazebo.cpp
kaia_gazebo/urdf/: goofy.urdf  kaia_burger.urdf  kaia_snoopy.urdf  kaia_waffle.urdf  kaia_waffle_pi.urdf  loki.urdf  snoopy.urdf
kaia_gazebo/worlds/: kaia_dqn_stage1.world  kaia_dqn_stage2.world  kaia_dqn_stage3.world  kaia_dqn_stage4.world  kaia_house.world
kaia_sims/: CMakeLists.txt  package.xml
kaia_simulations/: CMakeLists.txt  package.xml
kaiaai_gazebo/: CMakeLists.txt  package.xml
kaiaai_gazebo/LampAndStand/: model.sdf
kaiaai_gazebo/LampAndStand/meshes/bkp/: LampAndStand_repaired.mtl
kaiaai_gazebo/include/kaia_gazebo/: self_drive_gazebo.hpp
kaiaai_gazebo/launch/: self_drive_gazebo.launch.py  world.launch.py
kaiaai_gazebo/models/Chair/: model.sdf
kaiaai_gazebo/models/CoffeeTable/: model.sdf
kaiaai_gazebo/models/LampAndStand/: model.sdf
kaiaai_gazebo/models/LampAndStand/meshes/: LampAndStand.mtl
kaiaai_gazebo/models/MiniSofa/: model.sdf
kaiaai_gazebo/models/TVStand/: model.sdf
kaiaai_gazebo/models/kaia_world/: model.sdf
kaiaai_gazebo/models/kaiaai_poster/: model.config  model.sdf
kaiaai_gazebo/models/kaiaai_poster/material/script/: kaiaai_poster.material
kaiaai_gazebo/models/kaiaai_room_wall/: model.config  model.sdf
kaiaai_gazebo/models/kaiaai_world/: model.config  model.sdf
kaiaai_gazebo/models/living_room/: model.config  model.sdf
kaiaai_gazebo/models/makerspet_poster/: model.config  model.sdf
kaiaai_gazebo/models/makerspet_poster/material/script/: ada_lovelace_poster.material
kaiaai_gazebo/models/pet_gate/: model.config
kaiaai_gazebo/models/pet_gate_wide/: model.config
kaiaai_gazebo/models/red_ball_10in/: model.sdf
kaiaai_gazebo/models/room_wall_2x5/: model.sdf
kaiaai_gazebo/models/room_wall_2x5m/: model.config
kaiaai_gazebo/models/room_wall_2x5m/material/script/: room_wall_2x5.material
kaiaai_gazebo/models/rug_ivory_1m6x2m/: model.config  model.sdf
kaiaai_gazebo/models/rug_ivory_1m6x2m/material/script/: rug_ivory_1m6x2m.material
kaiaai_gazebo/models/rug_ivory_2m/: model.config
kaiaai_gazebo/models/window_curtains/: model.config  model.sdf  tmp
kaiaai_gazebo/models/window_curtains/material/script/: window_curtains.material
kaiaai_gazebo/script/: urdf2sdf.sh
kaiaai_gazebo/src/: self_drive_gazebo.cpp
kaiaai_gazebo/worlds/: kaia_world.world  kaiaai_world.world  living_room.sdf  living_room.world  living_room2.world  living_room_gated.world
kaiaai_simulations/: CMakeLists.txt  package.xml
launch/: self_drive_gazebo.launch.py  world.launch.py
models/Sofa/: model.sdf
models/TableMarble/: model.sdf
models/cat_figurines/: metadata.pbtxt  model.config  model.sdf
models/kaiaai_poster/: model.config  model.sdf
models/makerspet_poster/: model.sdf
models/makerspet_poster/material/script/: makerspet_poster.material
models/pet_gate/: model.sdf
models/pet_gate_wide/: model.sdf
models/racoon/: metadata.pbtxt  model.config  model.sdf
models/red_ball_10in/: model.config
models/squirrel/: metadata.pbtxt  model.config  model.sdf
src/: self_drive_gazebo.cpp
worlds/: living_room.world  living_room2.world  living_room3.world  living_room4.world  living_room_gated.world
