<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kaia_simulations</name>
  <version>0.0.0</version>
  <description>ROS2 packages for Kaia.ai robots simulations</description>

  <maintainer email="iliao@remake.ai">Ilia O.</maintainer>
  <author email="iliao@remake.ai">Ilia O.</author>
  <license>Apache-2.0</license>
  <url type="website">https://kaia.ai/</url>
  <url type="repository">https://github.com/kaiaai/kaia_simulations</url>
  <url type="bugtracker">https://github.com/kaiaai/kaia_simulations/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kaia_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
